--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,6 +8,18 @@
 @import "./constant/index";
 @import url('https://fonts.googleapis.com/css?family=Molengo|Noto+Sans+SC|Noto+Serif+SC|Lobster|ZCOOL+QingKe+HuangYou|ZCOOL+XiaoWei');
 @import url('//at.alicdn.com/t/font_1127427_8156c125kn9.css');
+@font-face {
+  font-family: 'iconfont';  /* Project id 2596276 */
+  src: url('//at.alicdn.com/t/font_2596276_siag8pb6358.woff2?t=1623051749221') format('woff2'),
+       url('//at.alicdn.com/t/font_2596276_siag8pb6358.woff?t=1623051749221') format('woff'),
+       url('//at.alicdn.com/t/font_2596276_siag8pb6358.ttf?t=1623051749221') format('truetype');
+}
+.iconfont {
+  font-family: "iconfont" !important; 
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
+}
 html,body,#app {
   height: 100%;
 }
