--- a/src/assets/styles/reset.element.ui.scss
+++ b/src/assets/styles/reset.element.ui.scss
@@ -8,7 +8,7 @@
   color: #fff;
   border: none;
   top: 50% !important;
-  // z-index: 2001 !important;
+  z-index: 9999 !important;
 }
 .el-message--success .el-message__content,
 .el-message .el-icon-success {
